2006-01-24  Atsushi Enomoto  <atsushi@ximian.com>

	* UTF7Encoding.cs UTF8Encoding.cs :
	  Fixed bug #77315 (Patch by pawel.sakowski@mind-breeze.com).
	  Make strict check for invalid surrogate.

2006-01-23  Atsushi Enomoto  <atsushi@ximian.com>

        * EncoderFallbackException.cs EncoderExceptionFallback.cs
          DecoderFallbackBuffer.cs EncoderReplacementFallback.cs
          EncoderFallbackBuffer.cs DecoderExceptionFallbackBuffer.cs
          EncoderFallback.cs DecoderReplacementFallbackBuffer.cs
          DecoderFallbackException.cs DecoderExceptionFallback.cs
          DecoderReplacementFallback.cs EncoderExceptionFallbackBuffer.cs
          EncoderReplacementFallbackBuffer.cs :
          include them in net_2_0bootstrap build.

2006-01-20  Atsushi Enomoto  <atsushi@ximian.com>

	* Decoder.cs : ditto.

2006-01-20  Atsushi Enomoto  <atsushi@ximian.com>

	* Encoder.cs : Fallback should be initialized to have an instance.

2006-01-20  Atsushi Enomoto  <atsushi@ximian.com>

	* Encoding.cs : Cloned instances should not be read-only.

2005-12-08  Atsushi Enomoto  <atsushi@ximian.com>

	* UTF8Encoding.cs : (GetChars) let ABCREM work effectively.

2005-12-08  Atsushi Enomoto  <atsushi@ximian.com>

	* Encoding.cs : now under 2.0 GetBytes(string,...) dispatches to
	  byte*-based GetBytes().
	* UTF8Encoding.cs : avoid extraneous DecoderFallbackBuffer creation
	  which came to happen after introducing fallback buffer.

2005-11-28  Atsushi Enomoto  <atsushi@ximian.com>

	* Encoding.cs, ASCIIEncoding.cs, Latin1Encoding.cs :
	  Added IsSingleByte.

2005-11-28  Atsushi Enomoto  <atsushi@ximian.com>

	* Encoder.cs : added new GetByteCount()/GetBytes() overloads.
	  Added FallbackBuffer.
	* Decoder.cs : added new GetCharCount()/GetChars() overloads.

2005-11-28  Atsushi Enomoto  <atsushi@ximian.com>

	* EncodingInfo.cs : new file.

2005-11-28  Atsushi Enomoto  <atsushi@ximian.com>

	* UTF32Encoding.cs : Sealed. Added the overload which has
	  throwOnInvalid parameter.