@@ -1,3 +1,7 @@
+2006-03-09  Zoltan Varga  <vargaz@gmail.com>
+
+	* Encoding.cs: Add stub for net 2.0 GetEncodings () method.
+
 2006-01-24  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* UTF7Encoding.cs UTF8Encoding.cs :
